Correct margin - more image overlap happened

--- a/timeline.css
+++ b/timeline.css
@@ -65,12 +65,12 @@
 
 	.timeline__item--left ul,
 	.timeline__item--left .timeline__content h2 {
-		margin-left: 200px;
+		margin-left: 45%;
 	}
 
 	.timeline__item--right ul,
 	.timeline__item--right .timeline__content h2 {
-		margin-right: 200px;
+		margin-right: 45%;
 	}
 }
 
